@@ -1,13 +1,11 @@
 import java.io.*;
 import java.net.*;
-import java.util.*;
-class DnsServer {
+import java.util.Scanner;
+class DnsServer{
     public static void main(String[] args) throws Exception {
-        ProcessBuilder pb = new ProcessBuilder("nslookup");
-        Process process = pb.start();
+        Process process = Runtime.getRuntime().exec("nslookup");
         Scanner scanner = new Scanner(process.getInputStream());
         String ipAddress = null;
-
         while (scanner.hasNextLine()) {
             String line = scanner.nextLine();
             if (line.contains("Address")) {
@@ -16,12 +14,11 @@ class DnsServer {
                 break;
             }
         }
-        scanner.close();
-		if (ipAddress != null) {
+        if (ipAddress != null) {
             InetAddress inetAddress = InetAddress.getByName(ipAddress);
             String hostname = inetAddress.getHostName();
             System.out.println("Hostname: " + hostname);
-        }
+        } 
         String hostNameToResolve = "www.amazon.com";
         InetAddress[] addresses = InetAddress.getAllByName(hostNameToResolve);
         System.out.println("IP addresses for " + hostNameToResolve + ":");
@@ -31,6 +28,8 @@ class DnsServer {
             }
         } catch (Exception e) {
             System.out.println(e);
+        } finally {
+            scanner.close();
         }
     }
 }
